// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a SingleMediaUpload 1`] = `
Array [
  <div
    class="mediaContainer default"
    role="presentation"
    tabindex="0"
  >
    <img
      class="thumbnail"
      src="sulu-400x400"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="su-upload"
            class="su-upload uploadIcon"
          />
          <div
            class="uploadInfoText"
          >
            Upload media
          </div>
        </div>
      </div>
    </div>
    <input
      style="display:none"
      tabindex="-1"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  >
    <button
      class="button link hasText"
      type="button"
    >
      <span
        aria-label="su-download"
        class="su-download buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_media.download_media
      </span>
    </button>
    <button
      class="button link hasText"
      type="button"
    >
      <span
        aria-label="su-trash-alt"
        class="su-trash-alt buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_media.delete_media
      </span>
    </button>
  </div>,
]
`;

exports[`Render a SingleMediaUpload in disabled state 1`] = `
<div
  class="mediaContainer default disabled"
  role="presentation"
>
  <img
    class="thumbnail"
    src="sulu-400x400"
  />
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="su-upload"
          class="su-upload uploadIcon"
        />
        <div
          class="uploadInfoText"
        >
          Upload media
        </div>
      </div>
    </div>
  </div>
  <input
    style="display:none"
    tabindex="-1"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaUpload with a different image size 1`] = `
Array [
  <div
    class="mediaContainer default"
    role="presentation"
    tabindex="0"
  >
    <img
      class="thumbnail"
      src="sulu-400x400"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="su-upload"
            class="su-upload uploadIcon"
          />
          <div
            class="uploadInfoText"
          >
            Upload media
          </div>
        </div>
      </div>
    </div>
    <input
      style="display:none"
      tabindex="-1"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  >
    <button
      class="button link hasText"
      type="button"
    >
      <span
        aria-label="su-download"
        class="su-download buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_media.download_media
      </span>
    </button>
    <button
      class="button link hasText"
      type="button"
    >
      <span
        aria-label="su-trash-alt"
        class="su-trash-alt buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_media.delete_media
      </span>
    </button>
  </div>,
]
`;

exports[`Render a SingleMediaUpload with an empty icon if no image is passed 1`] = `
<div
  class="mediaContainer default"
  role="presentation"
  tabindex="0"
>
  <div
    class="emptyIndicator"
  >
    <span
      aria-label="su-image"
      class="su-image"
    />
  </div>
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="su-upload"
          class="su-upload uploadIcon"
        />
        <div
          class="uploadInfoText"
        >
          Upload media
        </div>
      </div>
    </div>
  </div>
  <input
    style="display:none"
    tabindex="-1"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaUpload with an error message from the MediaUploadStore 1`] = `
Array [
  <div
    class="mediaContainer default disabled"
    role="presentation"
  >
    <img
      class="thumbnail"
      src="sulu-400x400"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="su-upload"
            class="su-upload uploadIcon"
          />
          <div
            class="uploadInfoText"
          >
            Upload media
          </div>
        </div>
      </div>
    </div>
    <input
      style="display:none"
      tabindex="-1"
      type="file"
    />
  </div>,
  <div
    class="errorText"
  >
    The uploaded file exceeds the configured maximum filesize.
  </div>,
]
`;

exports[`Render a SingleMediaUpload with the round skin 1`] = `
Array [
  <div
    class="mediaContainer round"
    role="presentation"
    tabindex="0"
  >
    <img
      class="thumbnail"
      src="sulu-400x400"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="su-upload"
            class="su-upload uploadIcon"
          />
          <div
            class="uploadInfoText"
          >
            Upload media
          </div>
        </div>
      </div>
    </div>
    <input
      style="display:none"
      tabindex="-1"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  >
    <button
      class="button link hasText"
      type="button"
    >
      <span
        aria-label="su-download"
        class="su-download buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_media.download_media
      </span>
    </button>
    <button
      class="button link hasText"
      type="button"
    >
      <span
        aria-label="su-trash-alt"
        class="su-trash-alt buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_media.delete_media
      </span>
    </button>
  </div>,
]
`;

exports[`Render a SingleMediaUpload without delete and download button 1`] = `
Array [
  <div
    class="mediaContainer default"
    role="presentation"
    tabindex="0"
  >
    <img
      class="thumbnail"
      src="sulu-400x400"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="su-upload"
            class="su-upload uploadIcon"
          />
          <div
            class="uploadInfoText"
          >
            Test
          </div>
        </div>
      </div>
    </div>
    <input
      style="display:none"
      tabindex="-1"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  />,
]
`;
